[gd_scene load_steps=3 format=3 uid="uid://cpsq0ius7m04k"]

[ext_resource type="Script" uid="uid://doc0w1tdxwvsk" path="res://scripts/systems/options.gd" id="1_eoolb"]
[ext_resource type="Theme" uid="uid://dcxmahd03hv1d" path="res://assets/themes/main_menu.tres" id="2_pwugr"]

[node name="options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eoolb")

[node name="bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.323498, 4.00688e-06, 0.226307, 1)

[node name="menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.5
offset_top = -30.0
offset_right = 107.5
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="backtomenu" type="Button" parent="menu"]
layout_mode = 2
theme = ExtResource("2_pwugr")
text = "Back to Menu"

[node name="deletesave" type="Button" parent="menu"]
layout_mode = 2
theme = ExtResource("2_pwugr")
text = "Delete Save"

[node name="notation" type="CheckBox" parent="menu"]
layout_mode = 2
text = "Use Scientific Notation"

[node name="musiclabel" type="Label" parent="menu"]
layout_mode = 2
text = "Music Volume"
horizontal_alignment = 1

[node name="musicvol" type="HSlider" parent="menu"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="sfxlabel" type="Label" parent="menu"]
layout_mode = 2
text = "SFX Volume"
horizontal_alignment = 1

[node name="sfxvol" type="HSlider" parent="menu"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="ImportButton" type="Button" parent="menu"]
layout_mode = 2
text = "Import Save"

[node name="ExportButton" type="Button" parent="menu"]
layout_mode = 2
text = "Export Save"

[node name="deleteconfirm" type="ConfirmationDialog" parent="."]
dialog_text = "Are you sure you want to delete your save?
(NOTE: This deletes ALL progress including all prestiges.)"

[node name="deletebackdrop" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.198883, 0.00735537, 0.0503494, 1)

[node name="deletemessage" type="RichTextLabel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 73
text = "Save Deleted"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FileDialog" type="FileDialog" parent="."]

[connection signal="pressed" from="menu/backtomenu" to="." method="_on_backtomenu_pressed"]
[connection signal="pressed" from="menu/deletesave" to="." method="_on_deletesave_pressed"]
[connection signal="toggled" from="menu/notation" to="." method="_on_notation_toggled"]
[connection signal="changed" from="menu/musicvol" to="." method="_on_musicvol_changed"]
[connection signal="changed" from="menu/sfxvol" to="." method="_on_sfxvol_changed"]
[connection signal="confirmed" from="deleteconfirm" to="." method="_on_deleteconfirm_confirmed"]
